main/default/objects/pharos__Trace_Result__c/pharos__Trace_Result__c.object-meta.xml
<CustomObject>
    <label>Trace Result</label>
    <nameField>
        <displayFormat>TR-{0000000}</displayFormat>
        <label>Trace Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trace Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>