main/default/objects/pharos__Trace_Result__c/fields/pharos__Issue__c.field-meta.xml
<CustomField>
    <fullName>pharos__Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issue</label>
    <referenceTo>pharos__Issue__c</referenceTo>
    <relationshipLabel>Trace Results</relationshipLabel>
    <relationshipName>Trace_Results</relationshipName>
    <type>Lookup</type>
</CustomField>