main/default/objects/pharos__Trace_Result__c/fields/pharos__Notification_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>pharos__Notification_Integration_Status__c</fullName>
    <label>Notification Integration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>