main/default/objects/pharos__Trace_Result__c/fields/pharos__Trace_Request__c.field-meta.xml
<CustomField>
    <fullName>pharos__Trace_Request__c</fullName>
    <label>Trace Request</label>
    <referenceTo>pharos__Trace_Request__c</referenceTo>
    <relationshipLabel>Trace Results</relationshipLabel>
    <relationshipName>Trace_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>