main/default/objects/pharos__Trace_Result__c/fields/pharos__Trace_Schedule__c.field-meta.xml
<CustomField>
    <fullName>pharos__Trace_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trace Schedule</label>
    <referenceTo>pharos__Trace_Schedule__c</referenceTo>
    <relationshipLabel>Trace Results</relationshipLabel>
    <relationshipName>Trace_Results</relationshipName>
    <type>Lookup</type>
</CustomField>