main/default/objects/pharos__Trace_Result__c/fields/pharos__Trace_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>pharos__Trace_Start_Date__c</fullName>
    <label>Trace Start Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>